홍보 상세페이지, 상품 상세페이지, 로그인화면 xml 작성, java 파일 작성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".LoginActivity" android:label="Login page"/>
+        <activity android:name=".DetailPromotionActivity" android:label="Promotion Detailed page"/>
+        <activity android:name=".DetailGoodsActivity" android:label="Goods Detailed Page"/>
+
     </application>
 
 </manifest>
