--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firevase:firebase-storage'
 }
