--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
 
         <activity android:name=".LoginActivity" android:label="Login page"/>
+        <activity android:name=".joinActivity"  android:label="Join page"/>
         <activity android:name=".DetailPromotionActivity" android:label="Promotion Detailed page"/>
         <activity android:name=".DetailGoodsActivity" android:label="Goods Detailed Page"/>
 
