--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".LoginActivity" android:label="Login page"/>
         <activity android:name=".DetailPromotionActivity" android:label="Promotion Detailed page"/>
         <activity android:name=".DetailGoodsActivity" android:label="Goods Detailed Page"/>
+        <activity android:name=".JoinActivity" android:label="Join Page"/>
 
     </application>
 
