--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     // recyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'me.relex:circleindicator:2.1.4'
 
     //viewpager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
