--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,8 @@
         </activity>
 
         <activity android:name=".LoginActivity" android:label="Login page"/>
-<!--        <activity android:name=".DetailPromotionActivity" android:label="Promotion Detailed page"/>-->
-        <!--
-        <activity android:name=".DetailGoodsFrag" android:label="Goods Detailed Page"/>
-        -->
         <activity android:name=".JoinActivity" android:label="Join Page"/>
+        <activity android:name=".LoadingActivity" android:label="Loading page"/>
 
     </application>
 
