--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MP202129" >
+        android:theme="@style/Theme.MP202129">
 
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity android:name=".MainActivity" android:exported="true"
+            android:windowSoftInputMode="adjustUnspecified|adjustPan"> <!-- EditText가 키보드 위로 보이도록 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
