feat: Use Activity instead of Fragment
* AddPromotionFrag.java -> AddPromotion.java
* 툴바 별도 지정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".LoadingActivity" android:label="Loading page"/>
         <activity android:name=".AddItem" android:label="Add item page"
             android:windowSoftInputMode="adjustUnspecified|adjustPan"/> <!-- EditText가 키보드 위로 보이도록 -->
+        <activity android:name=".AddPromotion" android:label="Add promotion page"
+            android:windowSoftInputMode="adjustUnspecified|adjustPan"/> <!-- EditText가 키보드 위로 보이도록 -->
 
 
     </application>
